@@ -10,6 +10,9 @@ What's New in Python 3.2.4
 Core and Builtins
 -----------------
 
+- Issue #16197: Update winreg docstrings and documentation to match code.
+  Patch by Zachary Ware.
+
 - Issue #14700: Fix buggy overflow checks when handling large precisions and
   widths in old-style and new-style formatting.
 
